--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
             "tools": [
                 "pdflatex",
                 "biber",
+                "makeindex",
                 "makeglossaries",
                 "pdflatex",
-                "pdflatex"
+                "biber",
+                "makeindex",
+                "makeglossaries"
             ]
         }
     ],
@@ -17,7 +20,7 @@
             "name": "biber",
             "command": "biber",
             "args": [
-                "%DOC%"
+                "Thesis"
             ],
             "env": {}
         },
@@ -25,7 +28,7 @@
             "name": "makeglossaries",
             "command": "makeglossaries",
             "args": [
-                "%DOC%"
+                "Thesis"
             ],
             "env": {}
         },
@@ -33,14 +36,20 @@
             "name": "pdflatex",
             "command": "pdflatex",
             "args": [
-                "-synctex=1",
-                "-interaction=nonstopmode",
-                "-file-line-error",
-                "%DOC%"
+                "Thesis"
             ],
             "env": {}
         },
+        {
+            "name": "makeindex",
+            "command": "makeindex",
+            "args": [
+                "-s", "Thesis.ist",
+                "-t", "Thesis.alg",
+                "-o", "Thesis.acr",
+                "Thesis.acn"
+            ]
+        }
       ],
-    "terminal.integrated.shell.linux": null,
     "latex-workshop.view.pdf.viewer": "tab"
 }
